# deep-field-metadetect

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  codecov.yml  conftest.py  environment.yml  pyproject.toml
.github/workflows/: tests-slow.yml  tests.yml
deep_field_metadetect/: detect.py  metacal.py  metadetect.py  mfrac.py  observation.py  utils.py
deep_field_metadetect/gaussmom/: gaussmom.py  gaussmom_core.py  stats.py  utils.py
deep_field_metadetect/gaussmom/tests/: test_gaussmom.py
deep_field_metadetect/jaxify/: jax_detection.py  jax_dfmd_defaults.py  jax_metacal.py  jax_metadetect.py  jax_mfrac.py  jax_sims.py  jax_utils.py  observation.py
deep_field_metadetect/jaxify/tests/: test_jax_deep_metacal.py  test_jax_detection.py  test_jax_metacal.py  test_jax_metadetect.py  test_jax_multiband.py  test_jax_multiband_sim_mdet.py  test_jax_ngmix_intermediates.py
deep_field_metadetect/tests/: test_deep_metacal.py  test_detect.py  test_metacal.py  test_metadetect.py  test_mfrac.py  test_noise_handling.py  test_pixel_cov.py  test_utils.py
deep_metadetection/: _version.py  detect.py  metacal.py  pixel_cov.py  utils.py
deep_metadetection/tests/: conftest.py  test_deep_metacal.py  test_detect.py  test_exists.py  test_metacal.py  test_noise_handling.py  test_pixel_cov.py  test_utils.py
notebooks/: test_gaussmom.ipynb  test_jax_deep_metadetect-Copy2.ipynb  test_jax_deep_metadetect-matts-hacks.ipynb  test_jax_metacal.ipynb  validation_mfrac_galsim_vs_ngmix.ipynb
