[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=7",
    "tomli>=1.0.0; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "deep-field-metadetect"
authors = [
    {name = "Matthew R. Becker", email = "mrbecker@anl.gov"},
]
description = "deep-field metadetection"
dynamic = ["version"]
license = {file = "LICENSE"}
readme = "README.md"

[project.urls]
home = "https://github.com/beckermr/deep-field-metadetect"

[tool.setuptools]
include-package-data = true
zip-safe = false
packages = {find = {exclude=["tests*"]}}

[tool.setuptools_scm]
write_to = "deep_field_metadetect/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["E", "F", "W"]
preview = true
